bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: '(' expected but identifier found.
  if litMessage() == 'R' {
     ^BDR:27: error: illegal start of simple expression
} 
^